--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -39,86 +39,140 @@
 				Слова из криптовалютного мира
 			</h1>
 		</header>
-		<div class="glossary__search">
-			<div class="glossary__search-wrapper container">
-				<form class="glossary__form" action="" method="">
-					<input class="glossary__form-search" type="text" name="glossary_search" placeholder="Поиск по глоссарию"
-						required>
-				</form>
-				<button class="glossary__search-button">
-					<span class="visually-hidden">
-						Показать фильтр
-					</span>
-				</button>
-				<ul class="glossary__filter glossary__filter_state_hidden reset-list">
-					<li class="glosary__filter-item">
-						<a class="glossary__filter-link glossary__filter-link_state_active" href="#">
-							#
-						</a>
-					</li>
-					<li class="glosary__filter-item">
-						<a class="glossary__filter-link" href="#">
-							a
-						</a>
-					</li>
-					<li class="glosary__filter-item">
-						<a class="glossary__filter-link" href="#">
-							b
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<!-- category -->
-		<div class="glossary__category">
-			<div class="glossary__category-wrapper container">
-				<a class="glossary__category-letter" href="#">
-					#
-				</a>
-
-				<!-- accordion -->
-				<div class="glossary__accordion accordion">
-					<button class="accordion__button" type="button">
-						<h2 class="accordion__title title title_size_small">
-							Active Management
-						</h2>
+		<!-- wrapper -->
+		<div class="glossary__wrapper">
+			<div class="glossary__search">
+				<div class="glossary__search-wrapper container">
+					<form class="glossary__form" action="" method="">
+						<input class="glossary__form-search" type="text" name="glossary_search" placeholder="Поиск по глоссарию"
+							required>
+					</form>
+					<button class="glossary__search-button">
+						<span class="visually-hidden">
+							Показать фильтр
+						</span>
 					</button>
-					<div class="accordion__body">
-						<p class="accordion__paragraph paragraph">
-							An economics concept in which one party has a direct advantage in efficiency in producing/providing a
-							specific good or service over another party.
-						</p>
-					</div>
+					<ul class="glossary__filter glossary__filter_state_hidden reset-list">
+						<li class="glosary__filter-item">
+							<a class="glossary__filter-link glossary__filter-link_state_active" href="#">
+								#
+							</a>
+						</li>
+						<li class="glosary__filter-item">
+							<a class="glossary__filter-link" href="#">
+								a
+							</a>
+						</li>
+						<li class="glosary__filter-item">
+							<a class="glossary__filter-link" href="#">
+								b
+							</a>
+						</li>
+					</ul>
 				</div>
-				<!-- /accordion -->
-
-				<!-- accordion -->
-				<div class="glossary__accordion accordion accordion_state_active">
-					<button class="accordion__button" type="button">
-						<h2 class="accordion__title title title_size_small">
-							Active Management
-						</h2>
-					</button>
-					<div class="accordion__body">
-						<p class="accordion__paragraph paragraph">
-							An economics concept in which one party has a direct advantage in efficiency in producing/providing a
-							specific good or service over another party.
-						</p>
-						<p class="accordion__paragraph paragraph" hidden>
-							An economics concept in which one party has a direct advantage in efficiency in producing/providing a
-							specific good or service over another party.
-						</p>
-						<p class="accordion__paragraph paragraph" hidden>
-							An economics concept in which one party has a direct advantage in efficiency in producing/providing a
-							specific good or service over another party.
-						</p>
-					</div>
-				</div>
-				<!-- /accordion -->
 			</div>
+
+			<!-- category -->
+			<div class="glossary__category">
+				<div class="glossary__category-wrapper container">
+					<a class="glossary__category-letter" href="#">
+						#
+					</a>
+
+					<!-- accordion -->
+					<div class="glossary__accordion accordion">
+						<button class="accordion__button" type="button">
+							<h2 class="accordion__title title title_size_small">
+								Active Management
+							</h2>
+						</button>
+						<div class="accordion__body">
+							<p class="accordion__paragraph paragraph">
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+						</div>
+					</div>
+					<!-- /accordion -->
+
+					<!-- accordion -->
+					<div class="glossary__accordion accordion accordion_state_active">
+						<button class="accordion__button" type="button">
+							<h2 class="accordion__title title title_size_small">
+								Active Management
+							</h2>
+						</button>
+						<div class="accordion__body">
+							<p class="accordion__paragraph paragraph">
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+							<p class="accordion__paragraph paragraph" hidden>
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+							<p class="accordion__paragraph paragraph" hidden>
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+						</div>
+					</div>
+					<!-- /accordion -->
+				</div>
+			</div>
+			<!-- /category -->
+
+			<!-- category -->
+			<div class="glossary__category">
+				<div class="glossary__category-wrapper container">
+					<a class="glossary__category-letter" href="#">
+						b
+					</a>
+
+					<!-- accordion -->
+					<div class="glossary__accordion accordion">
+						<button class="accordion__button" type="button">
+							<h2 class="accordion__title title title_size_small">
+								Active Management
+							</h2>
+						</button>
+						<div class="accordion__body">
+							<p class="accordion__paragraph paragraph">
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+						</div>
+					</div>
+					<!-- /accordion -->
+
+					<!-- accordion -->
+					<div class="glossary__accordion accordion accordion_state_active">
+						<button class="accordion__button" type="button">
+							<h2 class="accordion__title title title_size_small">
+								Active Management
+							</h2>
+						</button>
+						<div class="accordion__body">
+							<p class="accordion__paragraph paragraph">
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+							<p class="accordion__paragraph paragraph" hidden>
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+							<p class="accordion__paragraph paragraph" hidden>
+								An economics concept in which one party has a direct advantage in efficiency in producing/providing a
+								specific good or service over another party.
+							</p>
+						</div>
+					</div>
+					<!-- /accordion -->
+				</div>
+			</div>
+			<!-- /category -->
 		</div>
-		<!-- /category -->
+		<!-- /wrapper -->
 	</section>
 
 	<footer class="footer container">
