--- a/source/markup/profile.html
+++ b/source/markup/profile.html
@@ -18,22 +18,64 @@
 					alt="Имя пользователя"
 				>
 				<figcaption class="profile__avatar-info">
-					<div class="profile__avatar-status">
-						<svg
-							class="profile__avatar-icon"
-							width="12"
-							height="12"
-							aria-hidden="true"
-							focusable="false"
+					<div class="profile__avatar-info-wrapper">
+						<button
+							class="profile__avatar-status"
+							type="button"
 						>
-							<use href="assets/images/svg/sprite.svg#star"></use>
-						</svg>
-						<abbr
-							class="profile__avatar-text"
-							title="Very important person"
-						>
-							vip
-						</abbr>
+							<svg
+								class="profile__avatar-icon"
+								width="12"
+								height="12"
+								aria-hidden="true"
+								focusable="false"
+							>
+								<use href="assets/images/svg/sprite.svg#star"></use>
+							</svg>
+							<abbr
+								class="profile__avatar-text"
+								title="Very important person"
+							>
+								vip
+							</abbr>
+						</button>
+						<div class="profile__avatar-info-block">
+							<button
+								class="profile__avatar-status"
+								type="button"
+							>
+								<svg
+									class="profile__avatar-icon"
+									width="10"
+									height="12"
+									aria-hidden="true"
+									focusable="false"
+								>
+									<use href="assets/images/svg/sprite.svg#admin"></use>
+								</svg>
+								<span class="profile__avatar-text">
+									Admin
+								</span>
+							</button>
+							
+							<button
+								class="profile__avatar-status"
+								type="button"
+							>
+								<svg
+									class="profile__avatar-icon"
+									width="8"
+									height="8"
+									aria-hidden="true"
+									focusable="false"
+								>
+									<use href="assets/images/svg/sprite.svg#user"></use>
+								</svg>
+								<span class="profile__avatar-text">
+									User
+								</span>
+							</button>
+						</div>
 					</div>
 					<form
 						class="profile__block"
@@ -50,6 +92,7 @@
 							class="profile__input"
 							type="text"
 							name="user_nickname"
+							maxlength="40"
 							hidden
 						>
 						<button
