--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -56,12 +56,13 @@
 						<li class="glosary__filter-item">
 							<a
 								class="glossary__filter-link glossary__filter-link_state_active"
-								href="#all"
+								href="#special"
 							>
 								#
 							</a>
 						</li>
 						<li class="glosary__filter-item">
+							<!-- #letter-N -->
 							<a
 								class="glossary__filter-link"
 								href="#letter-b"
@@ -76,7 +77,7 @@
 			<!-- category -->
 			<div
 				class="glossary__category"
-				id="all"
+				id="special"
 			>
 				<div class="glossary__category-wrapper container">
 					<span class="glossary__category-letter glossary__category-letter_state_active">#</span>
