--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -162,16 +162,18 @@
 		</div>
 
 		<div class="last__content-top">
-			<div class="main-card last__grid-item1">
+			<div class="main-card last__grid">
 				<a class="link main-card__img-link" href="#">
 					<img class="main-card__img" src="assets/images/main/last/bakanse-desck.jpg"
 						alt="Человек балансирует в воздухе">
 				</a>
+
 				<div class="main-card__tag-wrapper">
 					<a class="button main-card__tag" href="#">
 						Торговля
 					</a>
 				</div>
+
 				<div class="main-card__info">
 					<p class="text text_size_small main-card__time">
 						5 минут
@@ -180,6 +182,7 @@
 						Новичек
 					</a>
 				</div>
+
 				<h2 class="title main-card__title">
 					<a class="link main-card__title-link" href="#">
 						Как создать хорошо сбалансированный криптопортфель
@@ -187,7 +190,7 @@
 				</h2>
 			</div>
 
-			<div class="main-card last__grid-item2">
+			<div class="main-card last__grid">
 				<a class="link main-card__img-link" href="#">
 					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg"
 						alt="Человек балансирует в воздухе">
@@ -211,6 +214,7 @@
 						Продвинутый
 					</a>
 				</div>
+				
 				<h2 class="title main-card__title">
 					<a class="link main-card__title-link" href="#">
 						Что такое фан-токен ФК «Порту» (PORTO)?
@@ -218,7 +222,7 @@
 				</h2>
 			</div>
 
-			<div class="main-card last__grid-item3 main-card_height_large">
+			<div class="main-card last__grid main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Глоссарий
@@ -242,7 +246,9 @@
 				</a>
 			</div>
 
-			<div class="main-card last__grid-item4 main-card_height_large">
+
+
+			<div class="main-card last__grid main-card_height_large">
 
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
@@ -269,7 +275,7 @@
 				</div>
 			</div>
 
-			<div class="main-card last__grid-item5 main-card_height_large">
+			<div class="main-card last__grid main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Binance
