popular css fix

--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -167,13 +167,11 @@
 					<img class="main-card__img" src="assets/images/main/last/bakanse-desck.jpg"
 						alt="Человек балансирует в воздухе">
 				</a>
-
 				<div class="main-card__tag-wrapper">
 					<a class="button main-card__tag" href="#">
 						Торговля
 					</a>
 				</div>
-
 				<div class="main-card__info">
 					<p class="text text_size_small main-card__time">
 						5 минут
@@ -182,7 +180,6 @@
 						Новичек
 					</a>
 				</div>
-
 				<h2 class="title main-card__title">
 					<a class="link main-card__title-link" href="#">
 						Как создать хорошо сбалансированный криптопортфель
@@ -190,7 +187,7 @@
 				</h2>
 			</div>
 
-			<div class="main-card last__grid">
+			<div class="main-card last__grid-item">
 				<a class="link main-card__img-link" href="#">
 					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg"
 						alt="Человек балансирует в воздухе">
@@ -214,7 +211,6 @@
 						Продвинутый
 					</a>
 				</div>
-
 				<h2 class="title main-card__title">
 					<a class="link main-card__title-link" href="#">
 						Что такое фан-токен ФК «Порту» (PORTO)?
@@ -222,7 +218,7 @@
 				</h2>
 			</div>
 
-			<div class="main-card last__grid main-card_height_large">
+			<div class="main-card last__grid-item main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Глоссарий
@@ -246,11 +242,7 @@
 				</a>
 			</div>
 
-
-
-
-
-			<div class="main-card last__grid main-card_height_large">
+			<div class="main-card last__grid-item main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Altcoin
@@ -274,7 +266,7 @@
 				</div>
 			</div>
 
-			<div class="main-card last__grid main-card_height_large">
+			<div class="main-card last__grid-item main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Binance
@@ -294,90 +286,6 @@
 					</a>
 				</div>
 			</div>
-
-						<div class="main-card last__grid main-card_height_large">
-							<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
-								<a class="button main-card__tag" href="#">
-									Binance
-								</a>
-							</div>
-							<h2 class="title main-card__title">
-								<a class="link main-card__title-link" href="#">
-									Как торговать фьючерсными контрактами ...
-								</a>
-							</h2>
-							<div class="main-card__info">
-								<p class="text text_size_small main-card__time">
-									4 минуты
-								</p>
-								<a class="link link_level_pro" href="#">
-									Профессионал
-								</a>
-							</div>
-						</div>
-
-									<div class="main-card last__grid main-card_height_large">
-										<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
-											<a class="button main-card__tag" href="#">
-												Binance
-											</a>
-										</div>
-										<h2 class="title main-card__title">
-											<a class="link main-card__title-link" href="#">
-												Как торговать фьючерсными контрактами ...
-											</a>
-										</h2>
-										<div class="main-card__info">
-											<p class="text text_size_small main-card__time">
-												4 минуты
-											</p>
-											<a class="link link_level_pro" href="#">
-												Профессионал
-											</a>
-										</div>
-									</div>
-
-												<div class="main-card last__grid main-card_height_large">
-													<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
-														<a class="button main-card__tag" href="#">
-															Binance
-														</a>
-													</div>
-													<h2 class="title main-card__title">
-														<a class="link main-card__title-link" href="#">
-															Как торговать фьючерсными контрактами ...
-														</a>
-													</h2>
-													<div class="main-card__info">
-														<p class="text text_size_small main-card__time">
-															4 минуты
-														</p>
-														<a class="link link_level_pro" href="#">
-															Профессионал
-														</a>
-													</div>
-												</div>
-
-															<div class="main-card last__grid main-card_height_large">
-																<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
-																	<a class="button main-card__tag" href="#">
-																		Binance
-																	</a>
-																</div>
-																<h2 class="title main-card__title">
-																	<a class="link main-card__title-link" href="#">
-																		Как торговать фьючерсными контрактами ...
-																	</a>
-																</h2>
-																<div class="main-card__info">
-																	<p class="text text_size_small main-card__time">
-																		4 минуты
-																	</p>
-																	<a class="link link_level_pro" href="#">
-																		Профессионал
-																	</a>
-																</div>
-															</div>
 		</div>
 	</section>
 
@@ -521,7 +429,7 @@
 
 			<div class="popular__content">
 
-				<div class="main-card main-card_height_large popular__grid-item1">
+				<div class="main-card main-card_height_large popular__grid-item1 popular__grid-item">
 					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 						<a class="button main-card__tag" href="#">
 							Торговля
@@ -536,13 +444,11 @@
 							+1
 						</a>
 					</div>
-
 					<h2 class="title main-card__title">
 						<a class="link main-card__title-link" href="#">
 							Полное руководство по торговле криптовалютой для начинающих
 						</a>
 					</h2>
-
 					<div class="main-card__info">
 						<p class="text text_size_small main-card__time">
 							63 минуты
@@ -553,7 +459,7 @@
 					</div>
 				</div>
 
-				<div class="main-card popular__grid-item2">
+				<div class="main-card popular__grid-item2 popular__grid-item">
 					<div class="main-card__info">
 						<p class="text text_size_small main-card__time">
 							4 минуты
@@ -585,7 +491,7 @@
 					</div>
 				</div>
 
-				<div class="main-card popular__grid-item3">
+				<div class="main-card popular__grid-item3 popular__grid-item">
 					<div class="main-card__info">
 						<p class="text text_size_small main-card__time">
 							4 минуты
@@ -620,7 +526,7 @@
 					</div>
 				</div>
 
-				<div class="main-card main-card_height_large popular__grid-item4">
+				<div class="main-card main-card_height_large popular__grid-item4 popular__grid-item">
 					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 						<a class="button main-card__tag" href="#">
 							Binance
@@ -641,8 +547,7 @@
 					</div>
 				</div>
 
-				<div class="main-card popular__grid-item5">
-
+				<div class="main-card popular__grid-item5 popular__grid-item">
 					<div class="main-card__info slider__card-info popular__card-info ">
 						<p class="text text_size_small main-card__time">
 							4 минуты
@@ -651,18 +556,15 @@
 							Новичек
 						</a>
 					</div>
-
 					<h2 class="title main-card__title popular__main-card-title ">
 						<a class="link main-card__title-link" href="#">
 							История цен биткоина
 						</a>
 					</h2>
-
 					<a class="link main-card__img-link" href="#">
 						<img class="main-card__img main-card__img_size_long" src="assets/images/main/popular/btc.png"
 							alt="Логотип биржи binance">
 					</a>
-
 					<div class="main-card__tag-wrapper  popular__card-tag-wrapper">
 						<a class="button main-card__tag" href="#">
 							Торговля
@@ -674,7 +576,6 @@
 							+3
 						</a>
 					</div>
-
 				</div>
 			</div>
 		</div>
