--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -66,7 +66,7 @@
 								alt="Человек входит в метавселенную">
 						</a>
 						<div class="main-card__tag-wrapper slider__card-tag-wrapper">
-							<a class="button main-card__tag" href="">
+							<a class="button main-card__tag main-card__tag-wrapper_position_none" href="">
 								Основы
 							</a>
 						</div>
@@ -163,11 +163,11 @@
 
 		<div class="last__content-top">
 			<div class="main-card last__grid">
-				<a class="link main-card__img-link" href="#">
-					<img class="main-card__img" src="assets/images/main/last/bakanse-desck.jpg"
+				<a class="link main-card__img-link main-card__img-link_order_top" href="#">
+					<img class="main-card__img " src="assets/images/main/last/bakanse-desck.jpg"
 						alt="Человек балансирует в воздухе">
 				</a>
-				<div class="main-card__tag-wrapper">
+				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top ">
 					<a class="button main-card__tag" href="#">
 						Торговля
 					</a>
@@ -188,11 +188,11 @@
 			</div>
 
 			<div class="main-card last__grid-item">
-				<a class="link main-card__img-link" href="#">
+				<a class="link main-card__img-link main-card__img-link_order_top" href="#">
 					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg"
-						alt="Человек балансирует в воздухе">
+						alt="Логотип клуба порту">
 				</a>
-				<div class="main-card__tag-wrapper">
+				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top ">
 					<a class="button main-card__tag" href="#">
 						Altcoin
 					</a>
@@ -218,8 +218,8 @@
 				</h2>
 			</div>
 
-			<div class="main-card last__grid-item main-card_height_large">
-				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+			<div class="main-card last__grid-item">
+				<div class="main-card__tag-wrapper main-card__img-link_order_top">
 					<a class="button main-card__tag" href="#">
 						Глоссарий
 					</a>
@@ -242,8 +242,8 @@
 				</a>
 			</div>
 
-			<div class="main-card last__grid-item main-card_height_large">
-				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+			<div class="main-card last__grid-item">
+				<div class="main-card__tag-wrapper">
 					<a class="button main-card__tag" href="#">
 						Altcoin
 					</a>
@@ -266,8 +266,8 @@
 				</div>
 			</div>
 
-			<div class="main-card last__grid-item main-card_height_large">
-				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+			<div class="main-card last__grid-item">
+				<div class="main-card__tag-wrapper">
 					<a class="button main-card__tag" href="#">
 						Binance
 					</a>
@@ -428,9 +428,8 @@
 			</div>
 
 			<div class="popular__content">
-
-				<div class="main-card main-card_height_large popular__grid-item1 popular__grid-item">
-					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+				<div class="main-card popular__grid-item">
+					<div class="main-card__tag-wrapper">
 						<a class="button main-card__tag" href="#">
 							Торговля
 						</a>
@@ -459,7 +458,7 @@
 					</div>
 				</div>
 
-				<div class="main-card popular__grid-item2 popular__grid-item">
+				<div class="main-card popular__grid-item">
 					<div class="main-card__info">
 						<p class="text text_size_small main-card__time">
 							4 минуты
@@ -478,7 +477,7 @@
 							alt="Логотип биржи binance">
 					</a>
 
-					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_bottom">
 						<a class="button main-card__tag" href="#">
 							Торговля
 						</a>
@@ -491,7 +490,7 @@
 					</div>
 				</div>
 
-				<div class="main-card popular__grid-item3 popular__grid-item">
+				<div class="main-card popular__grid-item">
 					<div class="main-card__info">
 						<p class="text text_size_small main-card__time">
 							4 минуты
@@ -510,7 +509,7 @@
 							alt="Логотип биржи binance">
 					</a>
 
-					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_bottom">
 						<a class="button main-card__tag" href="#">
 							Торговля
 						</a>
@@ -526,8 +525,8 @@
 					</div>
 				</div>
 
-				<div class="main-card main-card_height_large popular__grid-item4 popular__grid-item">
-					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+				<div class="main-card popular__grid-item">
+					<div class="main-card__tag-wrapper">
 						<a class="button main-card__tag" href="#">
 							Binance
 						</a>
@@ -547,7 +546,7 @@
 					</div>
 				</div>
 
-				<div class="main-card popular__grid-item5 popular__grid-item">
+				<div class="main-card popular__grid-item">
 					<div class="main-card__info slider__card-info popular__card-info ">
 						<p class="text text_size_small main-card__time">
 							4 минуты
@@ -565,7 +564,7 @@
 						<img class="main-card__img main-card__img_size_long" src="assets/images/main/popular/btc.png"
 							alt="Логотип биржи binance">
 					</a>
-					<div class="main-card__tag-wrapper  popular__card-tag-wrapper">
+					<div class="main-card__tag-wrapper  popular__card-tag-wrapper main-card__tag-wrapper_position_bottom">
 						<a class="button main-card__tag" href="#">
 							Торговля
 						</a>
@@ -620,7 +619,7 @@
 			<div class="study__content">
 
 
-				<div class="main-card study__main-card study__main-card-glossary">
+				<div class="main-card study__main-card-glossary">
 					<h2 class="title study-main-card__title study__main-card-title">
 						Что ищем?
 					</h2>
@@ -642,8 +641,8 @@
 					</a>
 				</div>
 
-				<div class="main-card main-card_height_large study__card">
-					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+				<div class="main-card">
+					<div class="main-card__tag-wrapper main-card__img-link_order_top">
 						<a class="button main-card__tag" href="#">
 							Глоссарий
 						</a>
@@ -664,8 +663,8 @@
 					</a>
 				</div>
 
-				<div class="main-card main-card_height_large study__card">
-					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+				<div class="main-card">
+					<div class="main-card__tag-wrapper main-card__img-link_order_top">
 						<a class="button main-card__tag" href="#">
 							Глоссарий
 						</a>
